# GA_Backend

./: .gitignore  .gitmodules  CORRECCION_ETIQUETAS_LATEX.md  Dockerfile  RESULTADO_FINAL.json  VALIDACION_RESULTADOS.md  benchmark_comparison.py  benchmark_results.json  prueba.json  rutacritica_adapter.py  rutacritica_results.json  test_porcentajes.py  test_result.json
quickshift/: .env.example  Cargo.toml  LEY_FUNDAMENTAL_VALIDATION.md  MAPEO_MAESTRO.md  PROJECT_STATUS.md  Plan.md  ROADMAP.md  normalize_mc2020.py  normalize_oa20251.py  test_electivos.json  test_ley_fundamental.py  test_query.json  test_ruta_critica.sh  verify_mapeo.py
quickshift-wasm/: Cargo.toml  wrangler.toml
quickshift-wasm/src/: main.rs
quickshift-wasm/src/algorithm/: extract.rs  extract_controller.rs
quickshift-wasm/src/excel/: malla.rs  oferta.rs
quickshift/analithics/: analytics.db
quickshift/docs/: ALGORITMO_MAPEO_MAESTRO.md  API-ENDPOINTS-CURSOS.md  MAPEO_MAESTRO.md  PHASE1_SUMMARY.md  Plan.md  QUICK_REFERENCE.md  RESUMEN_SOLUCION.md  SESSION_SUMMARY_30OCT2025.md
quickshift/src/: lib.rs  main.rs  openapi.json  server.rs  swagger.html
quickshift/src/algorithm/: clique.rs  clique_bk.rs  clique_bk2.rs  conflict.rs  extract.rs  extract_controller.rs  extract_optimizado.rs  filters.rs  mod.rs  pert.rs  ruta.rs  section_selector.rs
quickshift/src/algorithms/: clique.rs  extract.rs  mod.rs  pert.rs
quickshift/src/analithics/: db.rs  insertions.rs  jsonparsing.rs  mod.rs  queries.rs
quickshift/src/api_json/: mod.rs
quickshift/src/datafiles/: .~OA2024.xlsx  Book1.xlsx  MC2020.xlsx  (+11 more)
quickshift/tests/: TEST_RESULTS_SUMMARY.md  api_json_tests.rs  benchmark_vs_python.rs  check_inconsistencias_oa20251.rs  conflict_cache_tests.rs  determinism_benchmark.rs  dump_malla_and_oa_parsed.rs  extract_controller_tests.rs  filters_tests.rs  generate_malla_with_oa_codes.rs  integration_run_rutacritica.rs  malla_tests.rs  mapeo_tests.rs  ruta_prereqs.rs  test_6_course_priority.rs  test_cfg_presence.rs  test_debug_prerequisites.rs  test_equivalence_integration.rs  test_equivalences.rs  test_inconsistencias_oa_vs_malla.rs  test_ingles_prerequisites.rs  test_ley_fundamental.rs  test_malla2020_direct.rs  test_malla2020_full.rs  test_minimum_solutions.rs  test_oferta_parsing.rs  test_prerequisite_filtering.rs  test_solution_section_diversity.rs  test_specific_query.rs  test_ultimate_progression.rs
serverless/ga-proyect/: Cargo.toml  wrangler.toml
serverless/quickshift-wasm/: Cargo.toml  README.md  wrangler.toml
(+66 files in other folders)
