[package]
name = "quickshift-wasm"
version = "0.1.0"
edition = "2021"
authors = ["nomadstar <108416813+nomadstar@users.noreply.github.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
