[package]
name = "quickshift"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.30.1"
petgraph = "0.8.2"
plotters = "0.3.7"
polars = "0.50.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
umya-spreadsheet = "0.6"
zip = "0.6"
quick-xml = "0.27"
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
num_cpus = "1.17"
