[package]
name = "ga-proyect"
version = "0.1.0"
edition = "2021"
authors = ["nomadstar <108416813+nomadstar@users.noreply.github.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
